# shmup-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: actor.rs  gamestruct.rs  main.rs  rectutils.rs  sdlsetup.rs  state.rs  struct2d.rs  texturemap.rs
src/state/: game.rs  gamestate.rs  loopholdertrait.rs
src/struct2d/: actor.rs  player.rs  projectile.rs
